--- a/scenarios.yml
+++ b/scenarios.yml
@@ -1,38 +1,75 @@
-scenarios:
-  lets_roll:
-    start_year: 2001
-    prestige: 7
-    posture: HARD
-    troops: 11
-    funding: 9
-    cells: 11
-    phase: jihadist 
-    world_state:
-      Libya:
-        governance: POOR
-        alignment: ADVERSARY
-      Syria:
-        governance: FAIR
-        alignment: ADVERSARY
-      Iraq:
-        governance: POOR
-        alignment: ADVERSARY
-      Saudi_Arabia: 
-        governance: POOR
-        alignment: ALLY
-        troops_stationed: 2
-      Gulf_States: 
-        governance: FAIR
-        alignment: ALLY
-        troops_stationed: 2
-      Pakistan:
-        governance: FAIR
-        alignment: NEUTRAL
-      Afghanistan:
-        governance: ISLAMIST
-        alignment: ADVERSARY
-        cells:
-          sleeper: 4
-      Somalia:
-        markers: BESIEGED
-    
+lets_roll:
+  turn: 1
+  startYear: 2001
+  prestige: 7
+  posture: HARD
+  troops: 11
+  funding: 9
+  cells: 11
+  phase: "Jihadist Action Phase"
+  world_state:
+    Libya:
+      governance: POOR
+      alignment: ADVERSARY
+    Syria:
+      governance: FAIR
+      alignment: ADVERSARY
+    Iraq:
+      governance: POOR
+      alignment: ADVERSARY
+    Saudi_Arabia: 
+      governance: POOR
+      alignment: ALLY
+      troops_stationed: 2
+    Gulf_States: 
+      governance: FAIR
+      alignment: ALLY
+      troops_stationed: 2
+    Pakistan:
+      governance: FAIR
+      alignment: NEUTRAL
+    Afghanistan:
+      governance: ISLAMIST
+      alignment: ADVERSARY
+      cells:
+        sleeper: 4
+    Somalia:
+      markers: BESIEGED
+
+call_me_al:
+  turn: 1
+  startYear: 2001
+  prestige: 7
+  posture: SOFT
+  troops: 11
+  funding: 9
+  cells: 11
+  phase: "Jihadist Action Phase"
+  world_state:
+    Libya:
+      governance: POOR
+      alignment: ADVERSARY
+    Syria:
+      governance: FAIR
+      alignment: ADVERSARY
+    Iraq:
+      governance: POOR
+      alignment: ADVERSARY
+    Saudi_Arabia: 
+      governance: POOR
+      alignment: ALLY
+      troops_stationed: 2
+    Gulf_States: 
+      governance: FAIR
+      alignment: ALLY
+      troops_stationed: 2
+    Pakistan:
+      governance: FAIR
+      alignment: NEUTRAL
+    Afghanistan:
+      governance: ISLAMIST
+      alignment: ADVERSARY
+      cells:
+        sleeper: 4
+    Somalia:
+      markers: BESIEGED
