* Finished map_setup refactor

--- a/map.yml
+++ b/map.yml
@@ -4,6 +4,7 @@
   alignment: TEST
   governance: GOOD
   schengen: False
+  adjacent_countries: [Schengen, 'United States', 'United Kingdom']
   recruit_req: 0
   oil: False
   resources: 0
@@ -14,6 +15,7 @@
   alignment: TEST
   governance: GOOD
   schengen: False
+  adjacent_countries: [Schengen, 'Canada', 'United Kingdom', 'Philippines']
   recruit_req: 0
   oil: False
   resources: 0
@@ -24,6 +26,7 @@
   alignment: TEST
   governance: GOOD
   schengen: False
+  adjacent_countries: [Schengen, 'United States', 'Canada']
   recruit_req: 3
   oil: False
   resources: 0
@@ -34,6 +37,7 @@
   alignment: TEST
   governance: GOOD
   schengen: False
+  adjacent_countries: [Schengen, 'Russia', 'Turkey']
   recruit_req: 0
   oil: False
   resources: 0
@@ -44,6 +48,7 @@
   alignment: TEST
   governance: GOOD
   schengen: False
+  adjacent_countries: [Lebanon, Jordan, Egypt]
   recruit_req: 0
   oil: False
   resources: 0
@@ -54,6 +59,7 @@
   alignment: TEST
   governance: GOOD
   schengen: False
+  adjacent_countries: [Pakistan, 'Indonesia/Malaysia']
   recruit_req: 0
   oil: False
   resources: 0
@@ -64,6 +70,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: &schengen [Schengen, Canada, 'United States', 'United Kingdom', Serbia, Russia, Morocco, 'Algeria/Tunisia', Libya, Turkey, Lebanon]
   recruit_req: 0
   oil: False
   resources: 0
@@ -74,6 +81,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: *schengen
   recruit_req: 0
   oil: False
   resources: 0
@@ -84,6 +92,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: *schengen
   recruit_req: 0
   oil: False
   resources: 0
@@ -94,6 +103,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: *schengen
   recruit_req: 0
   oil: False
   resources: 0
@@ -104,6 +114,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: *schengen
   recruit_req: 2
   oil: False
   resources: 0
@@ -114,6 +125,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: *schengen
   recruit_req: 0
   oil: False
   resources: 0
@@ -124,6 +136,7 @@
   alignment: TEST
   governance: GOOD
   schengen: True
+  adjacent_countries: *schengen
   recruit_req: 2
   oil: False
   resources: 0
@@ -134,6 +147,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: [Schengen, Serbia, Turkey, Caucasus, 'Central Asia']
   recruit_req: 0
   oil: False
   resources: 0
@@ -144,6 +158,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: [Russia, Turkey, Iran, 'Central Asia']
   recruit_req: 0
   oil: False
   resources: 0
@@ -154,6 +169,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: [Thailand, 'Central Asia']
   recruit_req: 0
   oil: False
   resources: 0
@@ -164,6 +180,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: [Sudan, Somalia]
   recruit_req: 0
   oil: False
   resources: 0
@@ -174,6 +191,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: [China, Philippines, 'Indonesia/Malaysia']
   recruit_req: 0
   oil: False
   resources: 0
@@ -184,6 +202,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: ['United States', Thailand, 'Indonesia/Malaysia']
   recruit_req: 3
   oil: False
   resources: 0
@@ -194,6 +213,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Schengen, 'Algeria/Tunisia']
   recruit_req: 0
   oil: False
   resources: 2
@@ -204,6 +224,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Schengen, Morocco, Libya]
   recruit_req: 0
   oil: True
   resources: 2
@@ -214,6 +235,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Schengen, 'Algeria/Tunisia', Egypt, Sudan]
   recruit_req: 0
   oil: True
   resources: 1
@@ -224,6 +246,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Libya, Israel, Sudan]
   recruit_req: 0
   oil: False
   resources: 3
@@ -234,6 +257,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Libya, Egypt, 'Kenya/Tanzania', Somalia]
   recruit_req: 0
   oil: True
   resources: 1
@@ -244,6 +268,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Sudan, 'Kenya/Tanzania', Yemen]
   recruit_req: 0
   oil: False
   resources: 1
@@ -254,6 +279,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Israel, Syria, Iraq, 'Saudi Arabia']
   recruit_req: 0
   oil: False
   resources: 1
@@ -264,6 +290,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Turkey, Lebanon, Jordan, Iraq]
   recruit_req: 0
   oil: False
   resources: 2
@@ -274,6 +301,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Russia, Caucasus, Iran, Afghanistan, China]
   recruit_req: 0
   oil: False
   resources: 2
@@ -284,6 +312,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Thailand, India, Philippines, Pakistan]
   recruit_req: 0
   oil: True
   resources: 3
@@ -294,6 +323,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Schengen, Serbia, Russia, Caucasus, Iran, Syria, Iraq]
   recruit_req: 0
   oil: False
   resources: 2
@@ -304,6 +334,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Schengen, Syria, Israel]
   recruit_req: 0
   oil: False
   resources: 1
@@ -314,6 +345,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: ['Saudi Arabia', Somalia]
   recruit_req: 0
   oil: False
   resources: 1
@@ -324,6 +356,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Syria, Turkey, Iran, 'Gulf States', 'Saudi Arabia', Jordan]
   recruit_req: 0
   oil: True
   resources: 3
@@ -334,6 +367,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Jordan, Iraq, 'Gulf States', Yemen]
   recruit_req: 0
   oil: True
   resources: 3
@@ -344,6 +378,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Iran, Pakistan, 'Saudi Arabia', Iraq]
   recruit_req: 0
   oil: True
   resources: 3
@@ -354,6 +389,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Iran, Afghanistan, India, 'Gulf States', 'Indonesia/Malaysia']
   recruit_req: 0
   oil: False
   resources: 2
@@ -364,6 +400,7 @@
   alignment: TEST
   governance: TEST
   schengen: False
+  adjacent_countries: [Iran, Pakistan, 'Central Asia']
   recruit_req: 0
   oil: False
   resources: 1
@@ -374,6 +411,7 @@
   alignment: TEST
   governance: FAIR
   schengen: False
+  adjacent_countries: ['Central Asia', Afghanistan, Pakistan, 'Gulf States', Iraq, Turkey, Caucasus]
   recruit_req: 0
   oil: False
   resources: 0
