--- a/scenarios.yml
+++ b/scenarios.yml
@@ -2,7 +2,6 @@ lets_roll:
   turn: 1
   startYear: 2001
   prestige: 7
-  posture: Hard
   troops: 11
   funding: 9
   cells: 11
@@ -12,6 +11,8 @@ lets_roll:
     countries: 0
     cells_per_country: 0
   world_state:
+    United_States:
+      posture: HARD
     Libya:
       governance: POOR
       alignment: ADVERSARY
@@ -43,7 +44,6 @@ you_can_call_me_al:
   turn: 1
   startYear: 2001
   prestige: 7
-  posture: Soft
   troops: 11
   funding: 9
   cells: 11
@@ -53,6 +53,8 @@ you_can_call_me_al:
     countries: 0
     cells_per_country: 0
   world_state:
+    United_States:
+      posture: Soft
     Libya:
       governance: POOR
       alignment: ADVERSARY
@@ -84,7 +86,6 @@ anaconda:
   turn: 1
   startYear: 2002
   prestige: 8
-  posture: Hard
   troops: 5
   funding: 6
   cells: 13
@@ -94,6 +95,8 @@ anaconda:
     countries: 3
     cells_per_country: 1
   world_state:
+    United_States:
+      posture: Hard
     Libya:
       governance: POOR
       alignment: ADVERSARY
@@ -132,7 +135,6 @@ mission_accomplished:
   turn: 1
   startYear: 2003
   prestige: 3
-  posture: Hard
   troops: 0
   funding: 5
   cells: 5
@@ -142,6 +144,8 @@ mission_accomplished:
     countries: 0
     cells_per_country: 0
   world_state:
+    United_States:
+      posture: Hard
     Libya:
       governance: POOR
       alignment: ADVERSARY
