--- a/scenarios.yml
+++ b/scenarios.yml
@@ -2,15 +2,15 @@ lets_roll:
   turn: 1
   startYear: 2001
   prestige: 7
-  troops: 11
   funding: 9
-  cells: 11
   phase: "Jihadist Action Phase"
   events: []
   random_cell_placement:
     countries: 0
     cells_per_country: 0
   world_state:
+    Israel:
+      posture: LOCKED_HARD
     United_States:
       posture: HARD
     Libya:
@@ -38,23 +38,23 @@ lets_roll:
       alignment: ADVERSARY
       sleeper_cells: 4
     Somalia:
-      besieged: 1
+      markers: ['besieged']
 
 you_can_call_me_al:
   turn: 1
   startYear: 2001
   prestige: 7
-  troops: 11
   funding: 9
-  cells: 11
   phase: "Jihadist Action Phase"
   events: []
   random_cell_placement:
     countries: 0
     cells_per_country: 0
   world_state:
+    Israel:
+      posture: LOCKED_HARD
     United_States:
-      posture: Soft
+      posture: SOFT
     Libya:
       governance: POOR
       alignment: ADVERSARY
@@ -80,23 +80,23 @@ you_can_call_me_al:
       alignment: ADVERSARY
       sleeper_cells: 4
     Somalia:
-      besieged: 1
+      markers: ['besieged']
 
 anaconda:
   turn: 1
   startYear: 2002
   prestige: 8
-  troops: 5
   funding: 6
-  cells: 13
   phase: "Jihadist Action Phase"
   events: ["Patriot Act"]
   random_cell_placement:
     countries: 3
     cells_per_country: 1
   world_state:
+    Israel:
+      posture: LOCKED_HARD
     United_States:
-      posture: Hard
+      posture: HARD
     Libya:
       governance: POOR
       alignment: ADVERSARY
@@ -124,9 +124,9 @@ anaconda:
       alignment: ADVERSARY
       sleeper_cells: 4
       troops_stationed: 6
-      regime_change: 1
+      markers: ['regime_change']
     Somalia:
-      besieged: 1
+      markers: ['besieged']
     Central_Asia:
       governance: POOR
       alignment: ALLY
@@ -135,17 +135,17 @@ mission_accomplished:
   turn: 1
   startYear: 2003
   prestige: 3
-  troops: 0
   funding: 5
-  cells: 5
   phase: "Jihadist Action Phase"
   events: ["Patriot Act", 'Abu Sayyaf', 'NEST', 'Enhanced Measures', 'Renditions', 'Wiretapping']
   random_cell_placement:
     countries: 0
     cells_per_country: 0
   world_state:
+    Israel:
+      posture: LOCKED_HARD
     United_States:
-      posture: Hard
+      posture: HARD
     Libya:
       governance: POOR
       alignment: ADVERSARY
@@ -158,7 +158,7 @@ mission_accomplished:
       alignment: ALLY
       sleeper_cells: 3
       troops_stationed: 6
-      regime_change: 1
+      markers: ['regime_change']
     Iran:
       sleeper_cells: 1
     Saudi_Arabia:
@@ -179,9 +179,9 @@ mission_accomplished:
       alignment: ALLY
       sleeper_cells: 1
       troops_stationed: 5
-      regime_change: 1
+      markers: ['regime_change']
     Somalia:
-      besieged: 1
+      markers: ['besieged']
     Central_Asia:
       governance: FAIR
       alignment: NEUTRAL
@@ -190,8 +190,55 @@ mission_accomplished:
       alignment: NEUTRAL
       sleeper_cells: 1
     Philippines:
-      posture: Soft
+      posture: SOFT
       sleeper_cells: 1
       troops_stationed: 2
     United_Kingdom:
-      posture: Hard
+      posture: HARD
+
+test_scenario:
+  turn: 1
+  startYear: 1900
+  prestige: 7
+  funding: 5
+  phase: "Jihadist Action Phase"
+  events: []
+  random_cell_placement:
+    countries: 0
+    cells_per_country: 0
+  world_state:
+    Israel:
+      posture: LOCKED_HARD
+    United_States:
+      posture: HARD
+    Libya:
+      governance: POOR
+      alignment: ADVERSARY
+    Syria:
+      governance: FAIR
+      alignment: ADVERSARY
+    Iraq:
+      governance: POOR
+      alignment: ADVERSARY
+      plots: 2
+    Saudi_Arabia:
+      governance: POOR
+      alignment: ALLY
+      troops_stationed: 2
+    Pakistan:
+      governance: FAIR
+      alignment: NEUTRAL
+      troops_stationed: 2
+      active_cells: 4
+    Gulf_States:
+      governance: FAIR
+      alignment: ALLY
+      troops_stationed: 4
+      sleeper_cells: 1
+      active_cells: 4
+    Afghanistan:
+      governance: ISLAMIST_RULE
+      alignment: ADVERSARY
+      sleeper_cells: 4
+    Somalia:
+      markers: ['besieged']
