* refactor war of ideas * regime change, besieged, aid setters made saner

--- a/scenarios.yml
+++ b/scenarios.yml
@@ -209,6 +209,8 @@ test_scenario:
   world_state:
     Israel:
       posture: LOCKED_HARD
+    Canada:
+      posture: HARD
     United_States:
       posture: HARD
     Libya:
